fix: add 2mm line spacing on 50x25mm sample labels

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -175,7 +175,7 @@
 }
 
 .label-50x25-digits {
-  margin: 0.15mm 0 0;
+  margin: 0.15mm 0 2mm;
   padding: 0;
   font-size: 11pt;
   font-weight: 800;
@@ -193,17 +193,17 @@
 
 .label-50x25-details {
   width: 100%;
-  margin-top: 0.2mm;
+  margin-top: 0;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 0.1mm;
+  gap: 2mm;
   min-height: 0;
 }
 
 .label-50x25-line {
-  margin: 0.1mm 0 0;
+  margin: 0;
   padding: 0;
   font-size: 9pt;
   line-height: 1.12;
